# equalify

./: .gitignore  Home.py  README.md  Scholarship.py  augment.py  augmentedScholarship  config.yaml  load.py  load2.py  main.py  pyproject.toml  scholarship.py  scholarshipList.py  scrape.py  streamlit_site.py  userInfo.py
pages/: Search.py  Visualize.py
