[tool.poetry]
name = "equalify"
version = "0.1.0"
description = ""
authors = ["Sam Altman <sam@openai.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
bcrypt = "^4.2.0"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
